--- a/pom.xml
+++ b/pom.xml
@@ -58,5 +58,11 @@
 			<version>1.1.4</version>
 			<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
+		<dependency>
+			<groupId>com.aventstack</groupId>
+			<artifactId>extentreports</artifactId>
+			<version>5.0.3</version>
+		</dependency>
 	</dependencies>
 </project>
