Added Trains page objects to the OR

--- a/src/test/resources/objectRepositories/OR.properties
+++ b/src/test/resources/objectRepositories/OR.properties
@@ -26,3 +26,8 @@ removeInfant_Element=id:infantPaxMinus
 nextMonth_Button=cssSelector:span.DayPicker-NavButton--next
 travelClass_List=id:gi_class
 search_Button=id:gi_search_btn
+
+train_From_Textbox=xPath://span[span/text()='From :']/following-sibling::input
+train_To_Textbox=xPath://span[span/text()='To :']/following-sibling::input
+train_Journey_Date=cssSelector:input.widgetCalenderTxt
+train_Running_Status_Link=linkText:Train Running Status
