--- a/src/test/resources/objectRepositories/OR.properties
+++ b/src/test/resources/objectRepositories/OR.properties
@@ -1,4 +1,5 @@
 #www.goibibo.com
+#flights search page
 flights_Link=xPath://span[text()='Flights']
 hotels_Link=xPath://a[contains(@href,'hotel')]/span[text()='Hotels']
 goStaysHotels_Link=xPath://a[contains(@href,'gostays')]/span[text()='Hotels']
@@ -27,7 +28,42 @@ nextMonth_Button=cssSelector:span.DayPicker-NavButton--next
 travelClass_List=id:gi_class
 search_Button=id:gi_search_btn
 
+#flights search results page
+source_City_Textbox=id:gi_source_st_srp
+destination_City_Textbox=id:gi_destination_st_srp
+departure_Date_Textbox=id:start-date_srp
+return_Date_Textbox=id:end-date_srp
+total_Travellers_Element=id:pax_label_srp
+travel_Class_Element=xPath://span[@id='pax_label_srp']//following-sibling::span
+
+#<<<<<<<<-----SVG(Scalable Vector Graphics) OBJECT----->>>>>>>>
+highlighted_Date_Element=xPath://*[local-name()='text' and preceding-sibling::*[local-name()='rect' and contains(@fill,'#')]][1]
+
+min_Onward_Duration_Filter_Value=xPath://div[div/span/text()='Onward Duration']//span[@data-cy='minDuration']
+min_Return_Duration_Filter_Value=xPath://div[div/span/text()='Return Duration']//span[@data-cy='minDuration']
+max_Onward_Duration_Filter_Value=xPath://div[div/span/text()='Onward Duration']//span[@data-cy='maxDuration']
+max_Return_Duration_Filter_Value=xPath://div[div/span/text()='Return Duration']//span[@data-cy='maxDuration']
+min_Onward_Price_Filter_Value=xPath://div[div/span/text()='Onward Price']//span[@data-cy='minPrice']/text()[2]
+min_Return_Price_Filter_Value=xPath://div[div/span/text()='Return Price']//span[@data-cy='minPrice']/text()[2]
+max_Onward_Price_Filter_Value=xPath://div[div/span/text()='Onward Price']//span[@data-cy='maxPrice']/text()[2]
+max_Return_Price_Filter_Value=xPath://div[div/span/text()='Return Price']//span[@data-cy='maxPrice']/text()[2]
+flightItem_Element=cssSelector:div[data-cy^='flightItem_']
+airLines_Element=cssSelector:img.flightImagesNew+span
+departure_Time_Element=cssSelector:span[data-cy='depTime']
+duration_Element=cssSelector:div[data-cy='duration']
+arrival_Time_Element=cssSelector:span[data-cy='arrTime']
+final_Price_Element=cssSelector:span[data-cy='finalPrice']
+
+#trains search page
 train_From_Textbox=xPath://span[span/text()='From :']/following-sibling::input
 train_To_Textbox=xPath://span[span/text()='To :']/following-sibling::input
 train_Journey_Date=cssSelector:input.widgetCalenderTxt
 train_Running_Status_Link=linkText:Train Running Status
+
+#train live running status page
+train_Number_Textbox=id:train_run_st_train_details
+station_Dropdown=id:stn_drop_down
+yesterday_Status_Link=id:train_run_st_yes_link
+today_Status_Link=id:train_run_st_today_link
+tomorrow_Status_Link=id:train_run_st_tom_link
+get_Status_Button=id:trainRunningStatus
