Updated a few objets' properties

--- a/src/test/resources/objectRepositories/OR.properties
+++ b/src/test/resources/objectRepositories/OR.properties
@@ -43,16 +43,21 @@ min_Onward_Duration_Filter_Value=xPath://div[div/span/text()='Onward Duration']/
 min_Return_Duration_Filter_Value=xPath://div[div/span/text()='Return Duration']//span[@data-cy='minDuration']
 max_Onward_Duration_Filter_Value=xPath://div[div/span/text()='Onward Duration']//span[@data-cy='maxDuration']
 max_Return_Duration_Filter_Value=xPath://div[div/span/text()='Return Duration']//span[@data-cy='maxDuration']
-min_Onward_Price_Filter_Value=xPath://div[div/span/text()='Onward Price']//span[@data-cy='minPrice']/text()[2]
-min_Return_Price_Filter_Value=xPath://div[div/span/text()='Return Price']//span[@data-cy='minPrice']/text()[2]
-max_Onward_Price_Filter_Value=xPath://div[div/span/text()='Onward Price']//span[@data-cy='maxPrice']/text()[2]
-max_Return_Price_Filter_Value=xPath://div[div/span/text()='Return Price']//span[@data-cy='maxPrice']/text()[2]
+min_Onward_Price_Filter_Value=xPath://div[div/span/text()='Onward Price']//span[@data-cy='minPrice']
+min_Return_Price_Filter_Value=xPath://div[div/span/text()='Return Price']//span[@data-cy='minPrice']
+max_Onward_Price_Filter_Value=xPath://div[div/span/text()='Onward Price']//span[@data-cy='maxPrice']
+max_Return_Price_Filter_Value=xPath://div[div/span/text()='Return Price']//span[@data-cy='maxPrice']
 flightItem_Element=cssSelector:div[data-cy^='flightItem_']
 airLines_Element=cssSelector:img.flightImagesNew+span
 departure_Time_Element=cssSelector:span[data-cy='depTime']
 duration_Element=cssSelector:div[data-cy='duration']
 arrival_Time_Element=cssSelector:span[data-cy='arrTime']
 final_Price_Element=cssSelector:span[data-cy='finalPrice']
+onward_Price_Filter=xPath://div[span/text()='Onward Price']/span[text()='reset']
+return_Price_Filter=xPath://div[span/text()='Return Price']/span[text()='reset']
+onward_Duration_Filter=xPath://div[span/text()='Onward Duration']/span[text()='reset']
+return_Duration_Filter=xPath://div[span/text()='Return Duration']/span[text()='reset']
+preffered_Airlines_Filter=xPath://div[span/text()='Preferred Airlines']/span[text()='reset']
 
 #trains search page
 train_From_Textbox=xPath://span[span/text()='From :']/following-sibling::input
