Added Bus pages' specific objects to the OR

--- a/src/test/resources/objectRepositories/OR.properties
+++ b/src/test/resources/objectRepositories/OR.properties
@@ -72,3 +72,12 @@ yesterday_Status_Link=id:train_run_st_yes_link
 today_Status_Link=id:train_run_st_today_link
 tomorrow_Status_Link=id:train_run_st_tom_link
 get_Status_Button=id:trainRunningStatus
+
+#bus search page
+from_Bus_Stand=id:autosuggestBusSRPSrcHome
+to_Bus_Stand=id:autosuggestBusSRPDestHome
+results_From_Bus_Stand=id:autosuggestBusSRPSrc
+results_To_Bus_Stand=id:autosuggestBusSRPDest
+travel_Date_Element=cssSelector:input[data-testid='openCheckinCalendar']
+travel_Date_toNextMonth_Element=xPath://div[contains(@class,'dcalendarstyles')]//*[local-name()='svg' and contains(@class,'ArrowRightIcon')]
+search_Bus_Button=cssSelector:button[data-testid='searchBusBtn']
